2008-02-29  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (g_vfs_backend_obexftp_finalize),
	(_retrieve_folder_listing), (_query_file_info_helper),
	(do_open_for_read), (do_query_info), (do_query_fs_info),
	(do_enumerate), (do_delete): Use a convenience function
	to load directory listings, implement a simple cache there
	that keeps folder listings for 3 seconds (should speed up
	folder enumeration followed by info fetching, as well
	as checking for non-existant files)

2008-02-29  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsdaemonutils.[ch]:
	Rename gvfs_file_info_populate_names() to
        gvfs_file_info_populate_names_as_local() and
	add docs explaining when to use this function
	and when not to.

2008-02-29  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsdaemonutils.c:
        (gvfs_file_info_populate_content_types):
	Use g_content_type_get_icon() for the icon mapping.
	Use folder, not folder-remote for icon. I don't
	think we should use folder-remote for things like
	shares, not normal folders.

2008-02-29  Cosimo Cecchi  <cosimoc@gnome.org>

	* daemon/gvfsbackendcomputer.c: (recompute_files),
	(mount_volume_from_drive), (report_no_media_error),
	(poll_for_media_cb), (try_mount_mountable):
	Implement media polling for Computer backend, handling the case when
	no media is in the drive. Also adds a new string. (#514135)

2008-02-29  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* daemon/gvfsbackendnetwork.c (g_vfs_network_daemon_init):

	Added another translator comment.

2008-02-29  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* daemon/gvfsbackendftp.c (do_mount):

	Added translator comment.

2008-02-29  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* daemon/gvfsbackendftp.c (g_vfs_backend_ftp_pop_connection):

	Reuse existing string to reduce the impact of the string
	freeze breaks.

2008-02-28  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_mount):
	actually translate the display name
